Fix dots on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -210,3 +210,17 @@ h6 {
 		width: 100%;
 	}
 }
+
+/* Small iPhones 500px */
+@media(max-width: 500px) {
+	.small-timeline-item::before {
+		left: -1.5rem;
+		width: 0;
+		height: 0;
+		border-top: 10px solid transparent;
+		border-bottom: 10px solid transparent;
+		border-right:10px solid var(--gold);
+		border-radius: 0;
+		background-color: rgba(0,0,0,0)
+	}
+}
